--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "geneticbirds",
   "version": "1.0.0",
-  "description": "A biological simulation of a genetic algorithm where the goal is to survive and dodge as many bullets",
+  "description": "A biological simulation of a genetic algorithm birds learn how to fly",
   "main": "index.js",
   "scripts": {
     "test": "jest"
